@@ -3,6 +3,7 @@
  Deny from all
 </FilesMatch>
 
+Redirect permanent /developer/wincvs.php http://sourceforge.net/cvs/?group_id=13216
 Redirect permanent /developer/translate.php http://winmerge.org/developer/l10n/index.php
 Redirect permanent /WinMerge17/index.html http://winmerge.org/1.7/index.php
 Redirect permanent /WinMerge17/WinMergeChanges.html http://winmerge.org/1.7/changes.php
